@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.5.7
 ------------------------
+ o Fixed bug in pRolocVis in converting GO ids <2016-05-26 Thu>
 
 CHANGES IN VERSION 1.5.6
 ------------------------
